wip: migrate to nestjs, 3 separate top level modules
wip: migrate to nestjs, 3 separate top level modules

--- a/apps/platform-api/.eslintrc.json
+++ b/apps/platform-api/.eslintrc.json
@@ -20,7 +20,7 @@
       }
     },
     {
-      "files": ["**/pages/api/*"],
+      "files": ["**/pages/api/**"],
       "rules": {
         "@nx/enforce-module-boundaries": "off"
       }
