--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "@react-hookz/web": "22.0.0",
     "@serverlessq/nextjs": "^1.0.9",
     "@sotaproject/strikethrough": "^1.0.1",
-    "@storybook/core-server": "7.0.24",
+    "@storybook/core-server": "7.2.0",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "~0.5.0",
     "@uiw/react-codemirror": "4.11.6",
@@ -238,26 +238,26 @@
     "@nestjs/cli": "^10.0.2",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
-    "@nx/cypress": "16.5.2",
-    "@nx/devkit": "16.5.2",
-    "@nx/eslint-plugin": "16.5.2",
-    "@nx/jest": "16.5.2",
-    "@nx/js": "16.5.2",
-    "@nx/linter": "16.5.2",
-    "@nx/nest": "16.5.2",
-    "@nx/next": "16.5.2",
-    "@nx/node": "16.5.2",
-    "@nx/plugin": "16.5.2",
-    "@nx/react": "16.5.2",
-    "@nx/storybook": "16.5.2",
-    "@nx/web": "16.5.2",
-    "@nx/webpack": "16.5.2",
-    "@nx/workspace": "16.5.2",
-    "@storybook/addon-essentials": "7.0.24",
+    "@nx/cypress": "16.6.0",
+    "@nx/devkit": "16.6.0",
+    "@nx/eslint-plugin": "16.6.0",
+    "@nx/jest": "16.6.0",
+    "@nx/js": "16.6.0",
+    "@nx/linter": "16.6.0",
+    "@nx/nest": "16.6.0",
+    "@nx/next": "16.6.0",
+    "@nx/node": "16.6.0",
+    "@nx/plugin": "16.6.0",
+    "@nx/react": "16.6.0",
+    "@nx/storybook": "16.6.0",
+    "@nx/web": "16.6.0",
+    "@nx/webpack": "16.6.0",
+    "@nx/workspace": "16.6.0",
+    "@storybook/addon-essentials": "7.2.0",
     "@storybook/core-common": "7.0.7",
     "@storybook/nextjs": "7.0.7",
-    "@storybook/react-webpack5": "7.0.7",
-    "@storybook/test-runner": "^0.10.0",
+    "@storybook/react-webpack5": "7.2.0",
+    "@storybook/test-runner": "0.11.0",
     "@svgr/webpack": "8.0.1",
     "@swc-node/register": "~1.4.2",
     "@swc/cli": "~0.1.62",
@@ -387,8 +387,8 @@
     "lerna": "^7.0.1",
     "lint-staged": "13.2.2",
     "madge": "5.0.1",
-    "nx": "16.5.2",
-    "nx-cloud": "16.1.0",
+    "nx": "16.6.0",
+    "nx-cloud": "16.2.0",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
     "prettier": "^2.8.8",
