ci: fix workspace package

--- a/libs/tools/workspace/project.json
+++ b/libs/tools/workspace/project.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "name": "@codelab/tools-workspace",
+  "name": "tools-workspace",
   "projectType": "library",
   "sourceRoot": "libs/tools/workspace/src",
   "tags": ["scope:shared"],
