--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "preinstall": "nx build @codelab/tools-workspace",
+    "preinstall": "nx build tools-workspace",
     "e2e": "yarn cli tasks e2e --stage dev",
     "cli": "nx build cli && node ./dist/apps/cli/main.js",
     "docker:up": "scripts/docker/up.sh",
@@ -196,7 +196,6 @@
     "@babel/plugin-transform-typescript": "^7.20.13",
     "@babel/preset-react": "^7.18.6",
     "@babel/types": "7.18.2",
-    "@codelab/tools-workspace": "file:./dist/libs/tools/workspace",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@graphql-codegen/cli": "4.0.1",
@@ -373,6 +372,7 @@
     "serverless-plugin-optimize": "^4.2.1-rc.1",
     "serverless-plugin-typescript": "^2.1.5",
     "tailwindcss": "3.3.2",
+    "tools-workspace": "file:./dist/libs/tools/workspace",
     "ts-essentials": "9.1.2",
     "ts-jest": "29.1.0",
     "ts-morph": "^19.0.0",
