wip: use @Span() instead
fix: working decorator span for otel

test: fix e2e imports

revert: remove nestjs-otel

revert: remove @Span

wip: debugging too many spans issue

wip: working nested spans, context issue

--- a/apps/cli/project.json
+++ b/apps/cli/project.json
@@ -21,10 +21,7 @@
       "configurations": {
         "dev": {},
         "ci": {},
-        "prod": {
-          "outputPath": "dist/apps/cli-serverless",
-          "main": "apps/cli/src/serverless.ts"
-        }
+        "prod": {}
       }
     },
     "serve": {
