--- a/.docker/opentelemetry.yaml
+++ b/.docker/opentelemetry.yaml
@@ -7,14 +7,14 @@ receivers:
 exporters:
   prometheus:
     endpoint: '0.0.0.0:8889'
-    const_labels:
-      label1: value1
+    # const_labels:
+    #   label1: value1
 
   logging:
 
-  zipkin:
-    endpoint: 'http://zipkin-all-in-one:9411/api/v2/spans'
-    format: proto
+  # zipkin:
+  #   endpoint: 'http://zipkin-all-in-one:9411/api/v2/spans'
+  #   format: proto
 
   jaeger:
     endpoint: jaeger-all-in-one:14250
@@ -37,7 +37,7 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging, zipkin, jaeger]
+      exporters: [logging, jaeger]
     metrics:
       receivers: [otlp]
       processors: [batch]
