--- a/package.json
+++ b/package.json
@@ -83,20 +83,20 @@
     "@nestjs/swagger": "^7.1.2",
     "@next/bundle-analyzer": "13.4.6",
     "@opentelemetry/api": "^1.4.1",
-    "@opentelemetry/auto-instrumentations-node": "0.37.1",
-    "@opentelemetry/core": "^1.15.0",
-    "@opentelemetry/exporter-prometheus": "0.41.0",
-    "@opentelemetry/exporter-trace-otlp-http": "0.41.0",
-    "@opentelemetry/instrumentation": "^0.41.0",
-    "@opentelemetry/instrumentation-express": "^0.32.4",
-    "@opentelemetry/instrumentation-graphql": "^0.34.3",
-    "@opentelemetry/instrumentation-http": "^0.41.0",
-    "@opentelemetry/resources": "^1.15.0",
-    "@opentelemetry/sdk-metrics": "1.15.0",
-    "@opentelemetry/sdk-node": "0.41.0",
-    "@opentelemetry/sdk-trace-base": "^1.15.0",
-    "@opentelemetry/sdk-trace-node": "^1.15.0",
-    "@opentelemetry/semantic-conventions": "1.15.0",
+    "@opentelemetry/auto-instrumentations-node": "0.38.0",
+    "@opentelemetry/core": "^1.15.2",
+    "@opentelemetry/exporter-prometheus": "0.41.2",
+    "@opentelemetry/exporter-trace-otlp-http": "0.41.2",
+    "@opentelemetry/instrumentation": "^0.41.2",
+    "@opentelemetry/instrumentation-express": "^0.33.0",
+    "@opentelemetry/instrumentation-graphql": "^0.35.0",
+    "@opentelemetry/instrumentation-http": "^0.41.2",
+    "@opentelemetry/resources": "^1.15.2",
+    "@opentelemetry/sdk-metrics": "1.15.2",
+    "@opentelemetry/sdk-node": "0.41.2",
+    "@opentelemetry/sdk-trace-base": "^1.15.2",
+    "@opentelemetry/sdk-trace-node": "^1.15.2",
+    "@opentelemetry/semantic-conventions": "1.15.2",
     "@react-hook/size": "2.1.2",
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
@@ -109,7 +109,6 @@
     "@vendia/serverless-express": "^4.10.4",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.2",
-    "@vercel/otel": "^0.3.0",
     "adm-zip": "^0.5.10",
     "ajv": "8.12.0",
     "amqp-connection-manager": "^4.1.13",
@@ -129,6 +128,7 @@
     "csv-parser": "3.0.0",
     "editorjs-text-color-plugin": "^2.0.4",
     "env-var": "7.3.1",
+    "find-up": "^6.3.0",
     "flat": "^5.0.2",
     "framer-motion": "6.3.3",
     "graphql": "16.6.0",
@@ -140,6 +140,7 @@
     "joi": "^17.9.2",
     "jquery": "3.6.4",
     "lodash": "4.17.21",
+    "memfs": "^4.2.0",
     "micro": "^10.0.1",
     "mobx": "6.9.0",
     "mobx-keystone": "1.6.3",
@@ -151,7 +152,6 @@
     "neo4j-driver": "5.10.0",
     "nest-commander": "^3.7.1",
     "nest-neo4j": "^0.3.1",
-    "nestjs-otel": "^5.1.2",
     "nestjs-pino": "^3.2.0",
     "next": "13.4.7",
     "next-http-proxy-middleware": "^1.2.5",
