fix: change websites port from 3000 to 80

--- a/apps/websites/project.json
+++ b/apps/websites/project.json
@@ -42,7 +42,8 @@
         },
         "dev": {
           "buildTarget": "websites:build:dev",
-          "dev": true
+          "dev": true,
+          "port": 80
         }
       },
       "defaultConfiguration": "dev"
