fix: restore autocomplete

--- a/package.json
+++ b/package.json
@@ -41,12 +41,17 @@
     "@as-integrations/next": "2.0.0",
     "@auth0/nextjs-auth0": "2.6.0",
     "@babel/runtime": "7.18.3",
-    "@codemirror/autocomplete": "6.1.0",
-    "@codemirror/lang-css": "6.0.0",
-    "@codemirror/lang-html": "6.1.0",
-    "@codemirror/lang-javascript": "6.0.2",
-    "@codemirror/lang-json": "6.0.0",
-    "@codemirror/legacy-modes": "6.1.0",
+    "@codemirror/autocomplete": "^6.9.0",
+    "@codemirror/commands": "^6.2.4",
+    "@codemirror/lang-css": "^6.2.1",
+    "@codemirror/lang-html": "^6.4.5",
+    "@codemirror/lang-javascript": "^6.1.9",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/language": "^6.9.0",
+    "@codemirror/lint": "^6.4.0",
+    "@codemirror/search": "^6.5.1",
+    "@codemirror/state": "^6.2.1",
+    "@codemirror/view": "^6.16.0",
     "@dnd-kit/core": "6.0.5",
     "@fancyapps/ui": "4.0.16",
     "@fortawesome/fontawesome-pro": "6.1.2",
@@ -111,8 +116,7 @@
     "axios": "^1.0.0",
     "bull": "^4.10.4",
     "classnames": "^2.3.2",
-    "cm6-graphql": "^0.0.1",
-    "codemirror-graphql": "2.0.2",
+    "cm6-graphql": "^0.0.9",
     "core-js": "3.20.2",
     "cross-fetch": "3.1.4",
     "csv-parser": "3.0.0",
@@ -383,6 +387,7 @@
   },
   "resolutions": {
     "@opentelemetry/sdk-trace-base": "1.14.0",
+    "@codemirror/state": "^6.2.1",
     "antd@5.4.2": "patch:antd@npm%3A5.4.2#./.yarn/patches/antd-npm-5.4.2-0091a657e9.patch",
     "@neo4j/graphql@3.23.1": "patch:@neo4j/graphql@npm%3A3.23.1#./.yarn/patches/@neo4j-graphql-npm-3.23.1-0ed397fa2a.patch",
     "@neo4j/graphql@^3.23.1": "patch:@neo4j/graphql@npm%3A3.23.1#./.yarn/patches/@neo4j-graphql-npm-3.23.1-0ed397fa2a.patch"
