--- a/package.json
+++ b/package.json
@@ -176,8 +176,9 @@
     "reflect-metadata": "0.1.13",
     "rooks": "7.6.1",
     "rxjs": "^7.8.0",
-    "styled-components": "5.3.6",
+    "styled-components": "^6.0.7",
     "styled-jsx": "^5.1.2",
+    "stylis": "^4.0.0",
     "sucrase": "^3.32.0",
     "tar": "^6.1.13",
     "ts-json-schema-generator": "^1.2.0",
@@ -280,7 +281,6 @@
     "@types/react-syntax-highlighter": "15.5.4",
     "@types/scroll-into-view": "^1.16.0",
     "@types/stringify-object": "4.0.1",
-    "@types/styled-components": "5.1.26",
     "@types/tar": "^6.1.4",
     "@types/testing-library__cypress": "5.0.9",
     "@types/testing-library__jest-dom": "5.14.6",
