--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@apollo/server": "4.7.2",
     "@as-integrations/next": "2.0.0",
     "@auth0/nextjs-auth0": "2.6.0",
-    "@babel/runtime": "7.18.3",
     "@codemirror/autocomplete": "^6.9.0",
     "@codemirror/commands": "^6.2.4",
     "@codemirror/lang-css": "^6.2.1",
@@ -100,14 +99,12 @@
     "@react-hook/size": "2.1.2",
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
-    "@serverlessq/nextjs": "^1.0.9",
     "@sinclair/typebox": "^0.31.2",
     "@storybook/core-server": "7.3.2",
     "@sotaproject/strikethrough": "^1.0.1",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "~0.5.0",
     "@uiw/react-codemirror": "4.11.6",
-    "@vendia/serverless-express": "^4.10.4",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.2",
     "adm-zip": "^0.5.10",
@@ -163,6 +160,7 @@
     "object-typed": "^1.0.0",
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
+    "prettier": "^2.8.8",
     "puppeteer": "20.1.1",
     "ramda": "0.29.0",
     "re-resizable": "6.9.1",
@@ -187,7 +185,6 @@
     "recoil": "0.7.4",
     "reflect-metadata": "0.1.13",
     "rooks": "7.6.1",
-    "prettier": "^2.8.8",
     "rxjs": "^7.8.0",
     "styled-components": "^6.0.7",
     "styled-jsx": "^5.1.2",
@@ -209,10 +206,7 @@
     "zlib": "1.0.5"
   },
   "devDependencies": {
-    "@babel/core": "7.18.2",
-    "@babel/plugin-transform-typescript": "^7.20.13",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/types": "7.18.2",
+    "@codelab/tools-workspace": "file:./dist/libs/tools/workspace",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@editorjs/checklist": "^1.5.0",
@@ -322,11 +316,6 @@
     "ajv-keywords": "^5.1.0",
     "auth0-js": "^9.21.0",
     "autoprefixer": "10.4.14",
-    "aws-serverless-express": "^3.4.0",
-    "babel-jest": "29.5.0",
-    "babel-loader": "8.2.3",
-    "babel-plugin-import": "^1.13.5",
-    "babel-runtime": "6.26.0",
     "commitizen": "4.2.5",
     "commitlint-config-cz": "0.13.3",
     "commitlint-plugin-function-rules": "1.7.1",
@@ -395,12 +384,7 @@
     "nx-cloud": "16.4.0-beta.1",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
-    "serverless-esbuild": "^1.45.1",
-    "serverless-offline": "^12.0.4",
-    "serverless-plugin-optimize": "^4.2.1-rc.1",
-    "serverless-plugin-typescript": "^2.1.5",
     "tailwindcss": "3.3.2",
-    "tools-workspace": "file:./dist/libs/tools/workspace",
     "ts-essentials": "9.1.2",
     "ts-jest": "29.1.0",
     "ts-morph": "^19.0.0",
