wip: inline text editor

--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -11,8 +11,7 @@
       "worker-loader",
       "@fancyapps/ui",
       "cypher",
-      "styled-components",
-      "@editorjs"
+      "styled-components"
     ],
     "strict": true,
     "forceConsistentCasingInFileNames": true,
