--- a/package.json
+++ b/package.json
@@ -57,19 +57,14 @@
     "@editorjs/code": "^2.8.0",
     "@editorjs/delimiter": "^1.3.0",
     "@editorjs/editorjs": "^2.28.0",
-    "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
-    "@editorjs/image": "^2.8.1",
     "@editorjs/inline-code": "^1.4.0",
     "@editorjs/link": "^2.5.0",
     "@editorjs/list": "^1.8.0",
     "@editorjs/marker": "^1.3.0",
     "@editorjs/paragraph": "^2.10.0",
     "@editorjs/quote": "^2.5.0",
-    "@editorjs/raw": "^2.4.0",
-    "@editorjs/simple-image": "^1.5.1",
-    "@editorjs/table": "^2.2.2",
-    "@editorjs/warning": "^1.3.0",
+    "@editorjs/underline": "^1.1.0",
     "@fancyapps/ui": "4.0.16",
     "@fortawesome/fontawesome-pro": "6.1.2",
     "@fortawesome/fontawesome-svg-core": "6.1.2",
