--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
     "@serverlessq/nextjs": "^1.0.9",
+    "@sotaproject/strikethrough": "^1.0.1",
     "@storybook/core-server": "7.0.24",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "~0.5.0",
