chore: upgrade nx

--- a/package.json
+++ b/package.json
@@ -235,21 +235,21 @@
     "@nestjs/cli": "^10.0.2",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
-    "@nx/cypress": "16.7.2",
-    "@nx/devkit": "16.7.2",
-    "@nx/eslint-plugin": "16.7.2",
-    "@nx/jest": "16.7.2",
-    "@nx/js": "16.7.2",
-    "@nx/linter": "16.7.2",
-    "@nx/nest": "16.7.2",
-    "@nx/next": "16.7.2",
-    "@nx/node": "16.7.2",
-    "@nx/plugin": "16.7.2",
-    "@nx/react": "16.7.2",
-    "@nx/storybook": "16.7.2",
-    "@nx/web": "16.7.2",
-    "@nx/webpack": "16.7.2",
-    "@nx/workspace": "16.7.2",
+    "@nx/cypress": "16.7.4",
+    "@nx/devkit": "16.7.4",
+    "@nx/eslint-plugin": "16.7.4",
+    "@nx/jest": "16.7.4",
+    "@nx/js": "16.7.4",
+    "@nx/linter": "16.7.4",
+    "@nx/nest": "16.7.4",
+    "@nx/next": "16.7.4",
+    "@nx/node": "16.7.4",
+    "@nx/plugin": "16.7.4",
+    "@nx/react": "16.7.4",
+    "@nx/storybook": "16.7.4",
+    "@nx/web": "16.7.4",
+    "@nx/webpack": "16.7.4",
+    "@nx/workspace": "16.7.4",
     "@storybook/addon-essentials": "7.3.2",
     "@storybook/core-common": "7.0.7",
     "@storybook/nextjs": "7.0.7",
@@ -310,7 +310,7 @@
     "@types/yargs": "17.0.24",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "@vercel/remote-nx": "^1.0.1",
+    "@vercel/remote-nx": "^1.1.1",
     "@welldone-software/why-did-you-render": "7.0.1",
     "ajv-formats": "2.1.1",
     "ajv-keywords": "^5.1.0",
@@ -380,8 +380,8 @@
     "lerna": "^7.0.1",
     "lint-staged": "13.2.2",
     "madge": "5.0.1",
-    "nx": "16.7.2",
-    "nx-cloud": "16.4.0-beta.1",
+    "nx": "16.7.4",
+    "nx-cloud": "16.3.0",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
     "tailwindcss": "3.3.2",
