--- a/.env.test.example
+++ b/.env.test.example
@@ -7,7 +7,7 @@
 # Next
 #
 NEXT_PUBLIC_PLATFORM_HOST=http://127.0.0.1:3001
-PLATFORM_API_HOST=http://127.0.0.1:4001
+NEXT_PUBLIC_PLATFORM_API_HOST=http://127.0.0.1:4001
 
 KV_REST_API_URL=https://rich-lamb-44119.kv.vercel-storage.com
 KV_REST_API_TOKEN=
