--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@codemirror/state": "^6.2.1",
     "@codemirror/view": "^6.16.0",
     "@dnd-kit/core": "6.0.5",
+    "@editorjs/editorjs": "^2.28.0",
     "@fancyapps/ui": "4.0.16",
     "@fortawesome/fontawesome-pro": "6.1.2",
     "@fortawesome/fontawesome-svg-core": "6.1.2",
@@ -97,6 +98,7 @@
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
     "@serverlessq/nextjs": "^1.0.9",
+    "@sotaproject/strikethrough": "^1.0.1",
     "@storybook/core-server": "7.0.24",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "~0.5.0",
@@ -120,6 +122,7 @@
     "core-js": "3.20.2",
     "cross-fetch": "3.1.4",
     "csv-parser": "3.0.0",
+    "editorjs-text-color-plugin": "^2.0.4",
     "env-var": "7.3.1",
     "flat": "^5.0.2",
     "framer-motion": "6.3.3",
@@ -203,6 +206,17 @@
     "@babel/types": "7.18.2",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
+    "@editorjs/checklist": "^1.5.0",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/paragraph": "^2.10.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/underline": "^1.1.0",
     "@graphql-codegen/cli": "4.0.1",
     "@graphql-codegen/import-types-preset": "2.2.6",
     "@graphql-codegen/near-operation-file-preset": "2.5.0",
