--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "@react-hook/size": "2.1.2",
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
-    "@sinclair/typebox": "^0.31.2",
+    "@sinclair/typebox": "0.31.12",
     "@storybook/core-server": "7.3.2",
     "@sotaproject/strikethrough": "^1.0.1",
     "@supabase/supabase-js": "2.1.1",
@@ -193,6 +193,7 @@
     "tar": "^6.1.13",
     "ts-json-schema-generator": "^1.2.0",
     "tslib": "2.3.1",
+    "typebox-validators": "0.3.5",
     "typescript-json-schema": "^0.55.0",
     "uniforms": "3.10.2",
     "uniforms-antd": "3.10.2",
@@ -389,7 +390,7 @@
     "ts-jest": "29.1.0",
     "ts-morph": "^19.0.0",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6",
+    "typescript": "5.1.5",
     "utility-types": "3.10.0",
     "wait-on": "6.0.1"
   },
