wip: fixing atom data

--- a/libs/backend/application/page/project.json
+++ b/libs/backend/application/page/project.json
@@ -9,6 +9,13 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/backend/application/page/**/*.ts"]
+      },
+      "configurations": {
+        "ci": {
+          "format": "junit",
+          "outputFile": "tmp/reports/lint/backend-application-page.xml",
+          "quiet": true
+        }
       }
     }
   },
