--- a/libs/backend/infra/adapter/codelab/project.json
+++ b/libs/backend/infra/adapter/codelab/project.json
@@ -9,6 +9,13 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/backend/infra/adapter/codelab/**/*.ts"]
+      },
+      "configurations": {
+        "ci": {
+          "format": "junit",
+          "outputFile": "tmp/reports/lint/backend-infra-adapter-codelab.xml",
+          "quiet": true
+        }
       }
     }
   },
