--- a/.circleci/config/commands/restore-workspace.yml
+++ b/.circleci/config/commands/restore-workspace.yml
@@ -8,4 +8,7 @@ steps:
       keys:
         - node-modules-{{ checksum "yarn.lock" }}
         - nvm-cache-{{ checksum ".nvmrc" }}
+  - run:
+      command: npx nx reset
+      name: "Nx Reset"
   - setup-env
