fix: use lightweight viewer for preview and prod

--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "csv-parser": "3.0.0",
     "diff": "^5.1.0",
     "dir-compare": "^4.2.0",
+    "editorjs-react-renderer": "^3.5.1",
     "editorjs-text-color-plugin": "^2.0.4",
     "env-var": "7.4.1",
     "find-up": "^6.3.0",
