--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@
 # Next
 #
 NEXT_PUBLIC_PLATFORM_HOST=http://127.0.0.1:3000
-PLATFORM_API_HOST=http://127.0.0.1:4000
+NEXT_PUBLIC_PLATFORM_API_HOST=http://127.0.0.1:4000
 
 KV_REST_API_URL=https://rich-lamb-44119.kv.vercel-storage.com
 KV_REST_API_TOKEN=
