--- a/apps/platform-api/.env.example
+++ b/apps/platform-api/.env.example
@@ -10,3 +10,9 @@ AUTH0_CYPRESS_PASSWORD=
 NEO4J_URI=bolt://127.0.0.1:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=password
+
+#
+# Auth0
+#
+AUTH0_M2M_CLIENT_ID=6zuUSqqbPx1g10hoFpRsOqkNNTHJLCjC
+AUTH0_M2M_CLIENT_SECRET=
