--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ AUTH0_CLIENT_ID=UAkVJDeVRFYo1nmOv4JkSChj7AWscDYw
 AUTH0_CLIENT_SECRET=
 # Required for `initAuth0`
 AUTH0_AUDIENCE=https://codelab-app-dev.us.auth0.com/api/v2/
+# Configure for @nextjs-auth0
+AUTH0_BASE_URL=http://127.0.0.1:3000
 
 
 #
