--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,7 +189,7 @@ jobs:
       - run: npx cypress install
       - run: npx cypress verify
       - run:
-          command: yarn cli tasks e2e --stage ci
+          command: nx e2e platform-e2e -c ci
           name: Run E2E Tests
       - store_artifacts:
           destination: cypress/videos
