--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "sideEffects": false,
   "scripts": {
     "preinstall": "nx build tools-workspace",
-    "e2e": "yarn cli tasks e2e --stage dev",
+    "e2e": "nx e2e platform-e2e",
     "cli": "scripts/nx/cli.sh",
     "docker:up": "scripts/docker/up.sh",
     "tunnel": "ngrok http --region=us --hostname=api.codelab-dev.ngrok.io 127.0.0.1:3000",
@@ -270,7 +270,7 @@
     "@testing-library/user-event": "14.4.3",
     "@types/adm-zip": "^0.5.0",
     "@types/auth0": "3.3.2",
-    "@types/auth0-js": "^9.14.7",
+    "@types/auth0-js": "^9.21.0",
     "@types/aws-lambda": "^8.10.116",
     "@types/buble": "^0.20.1",
     "@types/concurrently": "6.4.0",
@@ -316,7 +316,7 @@
     "@welldone-software/why-did-you-render": "7.0.1",
     "ajv-formats": "2.1.1",
     "ajv-keywords": "^5.1.0",
-    "auth0-js": "^9.21.0",
+    "auth0-js": "^9.22.1",
     "autoprefixer": "10.4.14",
     "commitizen": "4.2.5",
     "commitlint-config-cz": "0.13.3",
