--- a/package.json
+++ b/package.json
@@ -76,7 +76,9 @@
     "@nestjs/cqrs": "^10.0.1",
     "@nestjs/devtools-integration": "^0.1.5",
     "@nestjs/graphql": "^11.0.6",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^9.4.2",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "10.0.4",
     "@nestjs/swagger": "^7.1.2",
     "@next/bundle-analyzer": "13.4.6",
@@ -159,6 +161,9 @@
     "next-seo": "5.15.0",
     "node-fetch": "3.1.0",
     "object-typed": "^1.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
     "prettier": "^2.8.8",
@@ -289,6 +294,8 @@
     "@types/mailchimp__mailchimp_marketing": "^3.0.8",
     "@types/multer": "^1.4.7",
     "@types/node": "18.14.2",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-local": "^1.0.35",
     "@types/prettier": "2.4.4",
     "@types/ramda": "0.29.2",
     "@types/react": "18.2.0",
