--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -12,7 +12,7 @@ steps:
   - run: npx cypress verify
   - run:
       name: 'Run E2E Tests'
-      command: nx e2e platform-e2e -c ci
+      command: npx nx e2e platform-e2e -c ci
   - store_artifacts:
       path: ~/project/apps/platform-e2e/src/videos
       destination: cypress/videos
