--- a/libs/shared/data/seed/project.json
+++ b/libs/shared/data/seed/project.json
@@ -1,65 +1,75 @@
 {
-  "name": "shared-data-seed",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/data/seed/src",
+  "name": "shared-data-seed",
   "projectType": "library",
+  "sourceRoot": "libs/shared/data/seed/src",
+  "tags": ["projectType:library", "type:concrete", "scope:shared"],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "libs/shared/data/seed/**/*.{ts,tsx,js,jsx,graphql}"
-        ]
-      },
       "configurations": {
         "ci": {
           "format": "junit",
           "outputFile": "tmp/reports/lint/shared-data-seed.xml",
           "quiet": true
         }
-      }
+      },
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": [
+          "libs/shared/data/seed/**/*.{ts,tsx,js,jsx,graphql}"
+        ]
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
+      },
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/shared/data/seed/jest.config.ts",
         "reporters": ["default"]
       }
     },
     "test:integration": {
-      "defaultConfiguration": "dev",
-      "options": {
-        "memoryLimit": 8192,
-        "color": true,
-        "testPathPattern": ["[i].spec.ts"],
-        "jestConfig": "libs/shared/data/seed/jest.config.ts"
-      },
       "configurations": {
+        "ci": {
+          "parallel": 3
+        },
         "dev": {
           "reporters": ["default"]
         },
         "test": {
           "reporters": ["default"]
-        },
-        "ci": {
-          "parallel": 3
         }
       },
+      "defaultConfiguration": "dev",
+      "defaultConfiguration": "dev",
       "executor": "@nx/jest:jest",
+      "options": {
+        "color": true,
+        "jestConfig": "libs/shared/data/seed/jest.config.ts",
+        "memoryLimit": 8192,
+        "testPathPattern": ["[i].spec.ts"]
+      },
+      "options": {
+        "color": true,
+        "jestConfig": "libs/shared/data/seed/jest.config.ts",
+        "memoryLimit": 8192,
+        "passWithNoTests": true,
+        "testPathPattern": ["[i].spec.ts"]
+      },
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     },
     "test:unit": {
-      "defaultConfiguration": "dev",
-      "options": {
-        "color": true,
-        "memoryLimit": 8192,
-        "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
-        "jestConfig": "libs/shared/data/seed/jest.config.ts"
-      },
       "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        },
         "dev": {
           "reporters": ["default"]
         },
@@ -67,9 +77,25 @@
           "reporters": ["default"]
         }
       },
+      "defaultConfiguration": "dev",
+      "defaultConfiguration": "dev",
       "executor": "@nx/jest:jest",
+      "options": {
+        "color": true,
+        "jestConfig": "libs/shared/data/seed/jest.config.ts",
+        "memoryLimit": 8192,
+        "parallel": 3,
+        "testPathPattern": ["[^i].spec.ts"]
+      },
+      "options": {
+        "color": true,
+        "jestConfig": "libs/shared/data/seed/jest.config.ts",
+        "memoryLimit": 8192,
+        "parallel": 3,
+        "passWithNoTests": true,
+        "testPathPattern": ["[^i].spec.ts"]
+      },
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     }
-  },
-  "tags": ["projectType:library", "type:concrete", "scope:shared"]
+  }
 }
