--- a/apps/platform-e2e/project.json
+++ b/apps/platform-e2e/project.json
@@ -18,10 +18,10 @@
           "baseUrl": "http://127.0.0.1:3000",
           "cypressConfig": "apps/platform-e2e/cypress.ci.config.ts",
           "devServerTarget": "platform-e2e:serve:ci",
-          "reporter": "../../node_modules/cypress-multi-reporters",
-          "reporterOptions": {
-            "mochaFile": "./tmp/reports/e2e/cypress-results-[hash].xml"
-          },
+          // "reporter": "../../node_modules/cypress-multi-reporters",
+          // "reporterOptions": {
+          //   "mochaFile": "./tmp/reports/e2e/cypress-results-[hash].xml"
+          // },
           "record": true,
           "parallel": true,
           "verbose": true
@@ -58,7 +58,7 @@
         "ci": {
           "commands": [
             {
-              "command": "npx wait-on --interval 1000 --delay 3001 http://127.0.0.1:3000 tcp:127.0.0.1:4000 && echo 'READY'"
+              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3000 tcp:127.0.0.1:4000 && echo 'READY'"
             },
             {
               "command": "npx nx serve platform -c ci"
