--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
     "@as-integrations/next": "2.0.0",
-    "@auth0/nextjs-auth0": "2.6.0",
+    "@auth0/nextjs-auth0": "3.1.0",
     "@codemirror/autocomplete": "^6.9.0",
     "@codemirror/commands": "^6.2.4",
     "@codemirror/lang-css": "^6.2.1",
@@ -115,7 +115,7 @@
     "amqplib": "^0.10.3",
     "animate.css": "4.1.1",
     "antd": "5.4.2",
-    "auth0": "3.4.0",
+    "auth0": "4.0.1",
     "aws-lambda": "^1.0.7",
     "axios": "^1.5.0",
     "bull": "^4.10.4",
@@ -142,6 +142,7 @@
     "isomorphic-fetch": "^3.0.0",
     "joi": "^17.9.2",
     "jquery": "3.6.4",
+    "jwks-rsa": "^3.0.1",
     "lodash": "4.17.21",
     "memfs": "^4.2.0",
     "micro": "^10.0.1",
@@ -273,8 +274,8 @@
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "14.4.3",
     "@types/adm-zip": "^0.5.0",
-    "@types/auth0": "3.3.2",
-    "@types/auth0-js": "^9.21.0",
+    "@types/auth0": "3.3.6",
+    "@types/auth0-js": "^9.21.1",
     "@types/aws-lambda": "^8.10.116",
     "@types/buble": "^0.20.1",
     "@types/concurrently": "6.4.0",
@@ -400,6 +401,11 @@
     "typescript": "5.1.5",
     "utility-types": "3.10.0",
     "wait-on": "6.0.1"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   },
   "resolutions": {
     "@opentelemetry/sdk-trace-base": "1.14.0",
