wip: fix select atom options

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -224,6 +224,9 @@
       "@codelab/frontend/infra/adapter/otel": [
         "libs/frontend/infra/adapter/otel/src/index.ts"
       ],
+      "@codelab/frontend/infra/auth0": [
+        "libs/frontend/infra/auth0/src/index.ts"
+      ],
       "@codelab/frontend/presentation/client/graphql": [
         "libs/frontend/presentation/client/graphql/src/index.ts"
       ],
@@ -282,10 +285,7 @@
       "@codelab/testing/cypress/nextjs-auth0": [
         "libs/testing/cypress/nextjs-auth0/src/index.ts"
       ],
-      "@codelab/tools-workspace": ["libs/tools/workspace/src/index.ts"],
-      "@codelab/frontend/infra/auth0": [
-        "libs/frontend/infra/auth0/src/index.ts"
-      ]
+      "@codelab/tools-workspace": ["libs/tools/workspace/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp", "dist"],
