--- a/libs/frontend/domain/element/project.json
+++ b/libs/frontend/domain/element/project.json
@@ -21,7 +21,7 @@
       },
       "outputs": ["{options.outputFile}"]
     },
-    "test:unit": {
+    "test": {
       "configurations": {
         "ci": {},
         "dev": {
