--- a/nx.json
+++ b/nx.json
@@ -83,9 +83,10 @@
         "unitTestRunner": "none",
         "compiler": "swc",
         "component": false,
-        "directory": "frontend",
+        "directory": "libs/frontend",
         "setParserOptionsProject": true,
         "strict": true,
+        "importPath": "@codelab/frontend",
         "tags": "scope:frontend"
       },
       "storybook-configuration": {
@@ -122,6 +123,7 @@
         "unitTestRunner": "none",
         "setParserOptionsProject": true,
         "strict": true,
+        "importPath": "@codelab/frontend",
         "tags": "scope:shared"
       }
     }
