--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -161,6 +161,9 @@
       "@codelab/frontend/abstract/core": [
         "libs/frontend/abstract/core/src/index.ts"
       ],
+      "@codelab/frontend/abstract/testing": [
+        "libs/frontend/abstract/testing/src/index.ts"
+      ],
       "@codelab/frontend/abstract/types": [
         "libs/frontend/abstract/types/src/index.ts"
       ],
