--- a/apps/platform-e2e/project.json
+++ b/apps/platform-e2e/project.json
@@ -48,10 +48,10 @@
               "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3001 tcp:127.0.0.1:4001  && echo 'READY'"
             },
             {
-              "command": "nx serve platform -c test"
+              "command": "npx nx serve platform -c test"
             },
             {
-              "command": "nx serve platform-api -c test"
+              "command": "npx nx serve platform-api -c test"
             }
           ]
         },
