--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "e2e": "nx e2e platform-e2e",
+    "e2e": "npx nx e2e platform-e2e",
     "cli": "scripts/nx/cli.sh",
     "docker:up": "scripts/docker/up.sh",
     "tunnel": "ngrok http --region=us --hostname=api.codelab-dev.ngrok.io 127.0.0.1:3000",
@@ -385,8 +385,8 @@
     "lerna": "^7.0.1",
     "lint-staged": "13.2.2",
     "madge": "5.0.1",
-    "nx": "16.7.4",
-    "nx-cloud": "16.4.0",
+    "nx": "16.9.1",
+    "nx-cloud": "16.3.0",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
     "tailwindcss": "3.3.2",
