--- a/package.json
+++ b/package.json
@@ -373,10 +373,10 @@
     "husky": "^8.0.0",
     "inquirer": "8.2.2",
     "is-port-reachable": "3.1.0",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.5.0",
-    "jest-environment-node": "29.5.0",
-    "jest-junit": "16.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-environment-node": "29.7.0",
+    "jest-junit": "^16.0.0",
     "jest-transform-stub": "2.0.0",
     "jose": "4.14.4",
     "json-schema": "0.4.0",
