--- a/libs/frontend/application/builder/project.json
+++ b/libs/frontend/application/builder/project.json
@@ -1,8 +1,8 @@
 {
-  "name": "frontend-application-builder",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/frontend/application/builder/src",
+  "name": "frontend-application-builder",
   "projectType": "library",
+  "sourceRoot": "libs/frontend/application/builder/src",
   "tags": [
     "projectType:library",
     "type:concrete",
@@ -11,61 +11,70 @@
   ],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "libs/frontend/application/builder/**/*.{ts,tsx,js,jsx,graphql}"
-        ]
-      },
       "configurations": {
         "ci": {
           "format": "junit",
           "outputFile": "tmp/reports/lint/frontend-application-builder.xml",
           "quiet": true
         }
-      }
+      },
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": [
+          "libs/frontend/application/builder/**/*.{ts,tsx,js,jsx,graphql}"
+        ]
+      },
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
+      },
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/frontend/application/builder/jest.config.ts",
         "reporters": ["default"]
       }
     },
     "test:integration": {
-      "defaultConfiguration": "dev",
-      "options": {
-        "memoryLimit": 8192,
-        "color": true,
-        "testPathPattern": ["[i].spec.ts"],
-        "jestConfig": "libs/frontend/application/builder/jest.config.ts"
-      },
       "configurations": {
+        "ci": {
+          "parallel": 3
+        },
         "dev": {
           "reporters": ["default"]
         },
         "test": {
           "reporters": ["default"]
-        },
-        "ci": {
-          "parallel": 3
         }
       },
+      "defaultConfiguration": "dev",
+      "defaultConfiguration": "dev",
       "executor": "@nx/jest:jest",
+      "options": {
+        "color": true,
+        "jestConfig": "libs/frontend/application/builder/jest.config.ts",
+        "memoryLimit": 8192,
+        "testPathPattern": ["[i].spec.ts"]
+      },
+      "options": {
+        "color": true,
+        "jestConfig": "libs/frontend/application/builder/jest.config.ts",
+        "memoryLimit": 8192,
+        "passWithNoTests": true,
+        "testPathPattern": ["[i].spec.ts"]
+      },
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     },
     "test:unit": {
-      "defaultConfiguration": "dev",
-      "options": {
-        "color": true,
-        "memoryLimit": 8192,
-        "parallel": 3,
-        "testPathPattern": ["[^i].spec.ts"],
-        "jestConfig": "libs/frontend/application/builder/jest.config.ts"
-      },
       "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        },
         "dev": {
           "reporters": ["default"]
         },
@@ -73,7 +82,24 @@
           "reporters": ["default"]
         }
       },
+      "defaultConfiguration": "dev",
+      "defaultConfiguration": "dev",
       "executor": "@nx/jest:jest",
+      "options": {
+        "color": true,
+        "jestConfig": "libs/frontend/application/builder/jest.config.ts",
+        "memoryLimit": 8192,
+        "parallel": 3,
+        "testPathPattern": ["[^i].spec.ts"]
+      },
+      "options": {
+        "color": true,
+        "jestConfig": "libs/frontend/application/builder/jest.config.ts",
+        "memoryLimit": 8192,
+        "parallel": 3,
+        "passWithNoTests": true,
+        "testPathPattern": ["[^i].spec.ts"]
+      },
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     }
   }
