--- a/libs/shared/abstract/types/tsconfig.lib.json
+++ b/libs/shared/abstract/types/tsconfig.lib.json
@@ -4,5 +4,5 @@
     "outDir": "../../../../dist/out-tsc"
   },
   "exclude": ["**/*.spec.ts"],
-  "include": ["**/*.ts", "../../infra/validation/src/types/nullish.ts"]
+  "include": ["**/*.ts"]
 }
