--- a/libs/tools/workspace/package.json
+++ b/libs/tools/workspace/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.1",
   "type": "commonjs",
   "generators": "./generators.json",
-  "executors": "./executors.json"
+  "executors": "./executors.json",
+  "dependencies": {
+    "@nx/devkit": "16.7.4"
+  }
 }
