wip: fixing integration specs

--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "editorjs-react-renderer": "^3.5.1",
     "editorjs-text-color-plugin": "^2.0.4",
     "env-var": "7.4.1",
-    "find-up": "^6.3.0",
+    "find-up": "^5.0.0",
     "flat": "^5.0.2",
     "framer-motion": "6.3.3",
     "graphql": "16.6.0",
@@ -165,7 +165,7 @@
     "passport-local": "^1.0.0",
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
-    "prettier": "^3.0.3",
+    "prettier": "2.8.8",
     "puppeteer": "20.1.1",
     "ramda": "0.29.0",
     "re-resizable": "6.9.1",
