--- a/.circleci/config/jobs/lint.yml
+++ b/.circleci/config/jobs/lint.yml
@@ -1,5 +1,5 @@
 executor: docker-node
-resource_class: large
+resource_class: arm.large
 environment:
   CIRCLE_BASE_REVISION: << pipeline.git.base_revision >>
   CIRCLE_REVISION: << pipeline.git.revision >>
