test: enhance renderer specs

--- a/package.json
+++ b/package.json
@@ -275,6 +275,7 @@
     "@types/auth0-js": "^9.21.1",
     "@types/aws-lambda": "^8.10.116",
     "@types/buble": "^0.20.1",
+    "@types/chance": "^1.1.4",
     "@types/concurrently": "6.4.0",
     "@types/cookie": "^0.5.1",
     "@types/diff": "^5.0.3",
@@ -322,6 +323,7 @@
     "ajv-keywords": "^5.1.0",
     "auth0-js": "^9.22.1",
     "autoprefixer": "10.4.14",
+    "chance": "^1.1.11",
     "commitizen": "4.2.5",
     "commitlint-config-cz": "0.13.3",
     "commitlint-plugin-function-rules": "1.7.1",
@@ -368,6 +370,7 @@
     "eslint-plugin-unicorn": "^47.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "execa": "5.1.1",
+    "fishery": "^2.2.2",
     "futoin-hkdf": "^1.4.3",
     "git-changed-files": "1.0.0",
     "globby": "11.1.0",
