--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -247,6 +247,12 @@
         "@typescript-eslint/no-namespace": "off",
         "@typescript-eslint/no-empty-interface": "off"
       }
+    },
+    {
+      "files": ["*.config.ts"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
     }
   ]
 }
