ci: test jest-junit format
ci: test jest-junit format

ci: test jest-junit format

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,10 +106,10 @@ commands:
 executors:
   docker-node:
     docker:
-      - image: cimg/node:18.17.0
+      - image: cimg/node:18.16.0-browsers
   docker-node-neo4j:
     docker:
-      - image: cimg/node:18.17.0
+      - image: cimg/node:18.16.0-browsers
       - command:
           - neo4j
           - start
@@ -138,7 +138,7 @@ jobs:
           name: Terraform Apply
   codegen:
     executor: docker-node-neo4j
-    resource_class: arm.medium
+    resource_class: medium
     steps:
       - restore-workspace
       - run:
@@ -146,7 +146,7 @@ jobs:
           name: GraphQL Codegen
   deploy-preview:
     executor: docker-node-neo4j
-    resource_class: arm.large
+    resource_class: large
     steps:
       - checkout
       - add_ssh_keys-f:
@@ -160,7 +160,7 @@ jobs:
           name: Trigger Vercel Deploy
   deploy-production:
     executor: docker-node-neo4j
-    resource_class: arm.large
+    resource_class: large
     steps:
       - restore-workspace
       - run:
@@ -178,7 +178,7 @@ jobs:
   e2e:
     executor: docker-node-neo4j
     parallelism: 4
-    resource_class: arm.large
+    resource_class: large
     steps:
       - restore-workspace
       - setup_remote_docker:
@@ -201,7 +201,7 @@ jobs:
           path: ./tmp/reports/e2e
   integration:
     executor: docker-node-neo4j
-    resource_class: arm.large
+    resource_class: large
     steps:
       - restore-workspace
       - run:
@@ -345,7 +345,7 @@ jobs:
           root: ~/
   setup-infra-workspace:
     executor: docker-node
-    resource_class: arm.large
+    resource_class: large
     steps:
       - restore-workspace
       - install-terraform
@@ -358,7 +358,7 @@ jobs:
           root: ~/
   setup-workspace:
     executor: docker-node
-    resource_class: arm.large
+    resource_class: large
     steps:
       - checkout
       - setup-env
@@ -371,7 +371,7 @@ jobs:
           root: ~/
   unit:
     executor: docker-node
-    resource_class: arm.large
+    resource_class: large
     steps:
       - restore-workspace
       - run:
