wip: fixing e2e specs pages
wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

wip: fixing e2e specs pages

--- a/apps/cli/project.json
+++ b/apps/cli/project.json
@@ -7,7 +7,7 @@
     "build": {
       "executor": "@nx/webpack:webpack",
       "outputs": ["{options.outputPath}"],
-      "defaultConfiguration": "dev",
+      "defaultConfiguration": "prod",
       "options": {
         "target": "node",
         "compiler": "tsc",
