--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,7 +186,7 @@ jobs:
       - run: npx cypress install
       - run: npx cypress verify
       - run:
-          command: npx nx e2e platform-e2e -c ci
+          command: npx nx e2e platform-e2e -c ci --verbose
           name: Run E2E Tests
       - store_artifacts:
           destination: cypress/videos
@@ -216,7 +216,7 @@ jobs:
     environment:
       CIRCLE_BASE_REVISION: << pipeline.git.base_revision >>
       CIRCLE_REVISION: << pipeline.git.revision >>
-    executor: docker-node
+    executor: docker-node-neo4j
     resource_class: large
     steps:
       - restore-workspace
