--- a/apps/cli/tsconfig.app.json
+++ b/apps/cli/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "../../dist/out-tsc",
     "module": "ESNext",
     "types": ["node", "cypher"],
-    "emitDecoratorMetadata": true,
+    "moduleResolution": "node",
     "target": "es2021",
     "strictNullChecks": true,
     "noImplicitAny": true,
